--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -64,8 +64,10 @@
     &nbsp;
         
         <table class="table" id="brandTable">
-            <caption>List of Brands
-              <button type="button" class="btn btn-secondary btn-sm float-right" data-toggle="modal" data-target="#uploadModal" id="uploadBrandButton" >Upload Brand List</button>
+            <caption>List of Brand
+                <button type="button" class="btn btn-secondary btn-sm float-right" data-toggle="modal" data-target="#uploadModal" id="uploadBrandButton" >Upload Brand List</button>
+                <button type="button" class="btn bg-transparent btn-sm float-right" ><span>&nbsp;</span></button>
+                <button type="button" class="btn btn-secondary btn-sm float-right" id="downloadButton" >Download Brand List</button>
             </caption>
             <thead class="table-dark">
                 <tr>
@@ -170,6 +172,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="../static/papaparse.min.js"></script>
+    <script src="../static/jquery-ajax-native.js"></script>
     <script src="../static/app.js"></script>
     <script src="../static/brand.js"></script>
 </body>
