--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -1,38 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <!-- Font Awesome-->
-        <script src="https://kit.fontawesome.com/c30beb553f.js" crossorigin="anonymous"></script>
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-        <title>pos</title>
-      </head>
+  <head th:replace="snippet.html :: name_head"></head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+    <nav th:replace="snippet.html :: name_app_navbar"></nav>
 
     &nbsp;
     <div class="container">
@@ -40,16 +10,20 @@
 
         <div class="row">
             <div class="col-4">
-                <a href="/admin.html" title="Admin"><i class="fas fa-cog fa-5x"></i></a>
+                <a th:href="@{/ui/brand}" title="Brand"><i class="fas fa-cog fa-5x"></i></a>
             </div>
 
             <div class="col-4">
-                <a href="/employee.html" title="Employee"><i class="fas fa-cog fa-5x"></i></a>
+                <a th:href="@{/ui/product}" title="Product"><i class="fas fa-cog fa-5x"></i></a>
             </div>
 
             <div class="col-4">
-                <a href="/customer.html" title="Customer"><i class="fas fa-cog fa-5x"></i></a>
+                <a th:href="@{/ui/inventory}" title="Inventory"><i class="fas fa-cog fa-5x"></i></a>
             </div>
+
+            <div class="col-4">
+              <a th:href="@{/ui/order}" title="Order"><i class="fas fa-cog fa-5x"></i></a>
+          </div>
         </div>
     </div>
 
