--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -1,18 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        
-        <!-- Font Awesome-->
-        <script src="https://kit.fontawesome.com/c30beb553f.js" crossorigin="anonymous"></script>
-
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    
-        <title>pos</title>
-      </head>
+    <head th:replace="snippet.html :: name_head"></head>
 <body>
 
     <div class="container">
@@ -22,7 +10,7 @@
                     <h1 class="display-4">Hello, world!</h1>
                     <p class="lead">Welcome to Point of Sale Web App</p>
                     <hr class="my-4">
-                    <a class="btn btn-primary btn-lg" href="../site/login" role="button">Get Started</a>
+                    <a class="btn btn-primary btn-lg" th:href="@{/site/login}" role="button">Get Started</a>
                 </div>
             </div>
         </div>
