--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -6,7 +6,6 @@
     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
         <ol class="breadcrumb">
           <li class="breadcrumb-item"><a th:href="@{/ui/home}">Home</a></li>
-          <li class="breadcrumb-item"><a th:href="@{/ui/admin}">Admin</a></li>
           <li class="breadcrumb-item active" aria-current="page">Order</li>
         </ol>
       </nav>
@@ -14,7 +13,7 @@
     <div class="container">
         <form id="addOrder">
         <div class="row">
-          <h4 class="col">Order Master</h4>
+          <h4 class="col">Order</h4>
           <button type="button" class="btn btn-primary mb-2 col-3 float-right col-2" data-toggle="modal" data-target="#createOrderModal" id="resetOrderItemTable">
             Create Order
           </button>
@@ -22,7 +21,6 @@
         </form>
 
         <table class="table table-bordered" id="orderTableMain">
-          <caption>List of Orders</caption>
           <thead >
           </thead>
           <tbody id="orderTableMainBody">
@@ -31,7 +29,7 @@
                 <table class="table" id="orderTable">
                   <thead class="table-dark">
                       <tr>
-                          <th scope="col" name="id">#</th>
+                          <th scope="col" name="id">Serial No.</th>
                           <th scope="col" name="barcode">Barcode</th>
                           <th scope="col" name="quantity">Quantity</th>
                           <th scope="col" name="mrp">Mrp</th>
@@ -183,19 +181,28 @@
       
                   <div class="panel panel-default">
                     <div class="panel-heading">
-                      <h4 class="panel-title"><a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo">Upload Order Items</a></h4>
+                      <h4 class="panel-title"><a class="accordion-toggle collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" id="uploadOrderButton">Upload Order Items</a></h4>
                     </div>
                     <div id="collapseTwo" class="panel-collapse collapse">
                       <div class="panel-body">
                         <div class="custom-file">
-                          <input type="file" class="custom-file-input" id="customFile">
-                          <label class="custom-file-label" for="customFile" id="customFileName">Choose file</label>
+                          <input type="file" class="custom-file-input" id="orderFile">
+                          <label class="custom-file-label" for="customFile" id="orderFileName">Choose file</label>
                         </div>
-                          <a href="../static/orderItem.tsv" target="_blank">Download Sample</a> 
+                          <a href="../static/order.tsv" target="_blank">Download Sample</a> 
                           <br>
                           Rows: <span id="rowCount">0</span>, 
                           Processed: <span id="processCount">0</span>, 
                           Errors: <span id="errorCount">0</span>
+                          &nbsp;
+                        <div class="row">
+                          <div class="col-1"></div>
+                          <button type="button" class="btn btn-primary col-4" id="processOrder">Upload</button>
+                          <div class="col-1"></div>
+                          <div class="col-1"></div>
+                          <button type="button" class="btn btn-warning col-4" id="download-errors">Download Errors</button>
+                          <div class="col-1"></div>
+                        </div>
                       </div>
                     </div>
                   </div>
