--- a/src/main/webapp/html/snippet.html
+++ b/src/main/webapp/html/snippet.html
@@ -18,8 +18,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" th:href="@{/ui/home}">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" th:href="@{/ui/home}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/ui/brand}">Brand</a>
@@ -32,6 +32,9 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" th:href="@{/ui/order}">Order</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" th:href="@{/ui/admin}">Admin</a>
           </li>
       </ul>
     </div>
