Changes made to UI and Order and OrderItem

--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -14,7 +14,7 @@
         <div class="row">
         <h3 class="col-7">Brand</h3>
         <div class="col-5 float-right">
-          <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></button>
+          <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></button>
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal" id="uploadBrandButton" >Upload Brand List</button>
           <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;</span></button>
           <button type="button" class="btn btn-primary" id="downloadButton" >Download Brand List</button>
@@ -29,14 +29,15 @@
                 <div class="col-5">
                     <input type="text" class="form-control" name="category" placeholder="Category" id="categoryInput">
                 </div>
-                <div class="col-1">
-                    <button type="submit" class="btn btn-primary mb-2" id="addBrand">&nbsp; Add &nbsp;</button>
+                <div class="col-2">
+                    <button type="submit" class="btn btn-primary mb-2 float-right" id="addBrand">&nbsp; Add &nbsp;</button>
                 </div>
-                <div class="col-1">
+                <!-- Comment off the following code to have update button -->
+                <!-- <div class="col-1">
                   <button type="button" class="btn btn-primary mb-2" data-toggle="modal" data-target="#updateModal">
                     Update
                   </button>
-              </div>
+              </div> -->
             </div>
         </form>
     &nbsp;
@@ -80,7 +81,7 @@
               <form id="brandUpdateForm">
                 <div class="form-row">
                   <div>
-                    <h5>&nbsp;Enter the Brand and Category you want to update</h5>
+                    <h5>&nbsp;Current Brand and Category</h5>
                   </div>
                 </div>
                 <div class="form-row">
@@ -94,7 +95,7 @@
                 &nbsp;
                 <div class="form-row">
                   <div>
-                    <h5>&nbsp;Enter the updated Brand and Category</h5>
+                    <h5>&nbsp;Updated Brand and Category</h5>
                   </div>
                 </div>
                 <div class="form-row">
@@ -146,11 +147,7 @@
         </div>
       </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="../static/papaparse.min.js"></script>
-    <script src="../static/jquery-ajax-native.js"></script>
-    <script src="../static/app.js"></script>
+    <footer th:replace="snippet.html :: name_footer"></footer>
     <script src="../static/brand.js"></script>
 </body>
 </html>
