--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -14,7 +14,7 @@
         <div class="row">
             <h3 class="col-7">Product</h3>
             <div class="col-5 float-right">
-                <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></button>
+                <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span></button>
                 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadModal" id="uploadProductButton" >Upload Product List</button>
                 <button type="button" class="btn bg-transparent btn-sm" ><span>&nbsp;</span></button>
                 <button type="button" class="btn btn-primary" id="downloadButton" >Download Product List</button>
@@ -38,14 +38,15 @@
                 <div class="col-2">
                     <input type="text" class="form-control" name="mrp" placeholder="Mrp" id="mrpInput">
                 </div>                
-                <div class="col-1">
-                    <button type="submit" class="btn btn-primary mb-2" id="addProduct">&nbsp; Add &nbsp;</button>
+                <div class="col-2">
+                    <button type="submit" class="btn btn-primary mb-2 float-right" id="addProduct">&nbsp; Add &nbsp;</button>
                 </div>
-                <div class="col-1">
+                <!-- Comment off the following code to have update functionality -->
+                <!-- <div class="col-1">
                     <button type="button" class="btn btn-primary mb-2" data-toggle="modal" data-target="#updateModal">
                       Update
                     </button>
-                </div>
+                </div> -->
             </div>
         </form>
     &nbsp;
@@ -92,7 +93,7 @@
                     <form id="productUpdateForm">
                         <div class="form-row">
                         <div>
-                            <h5>&nbsp;Enter the Product barcode you want to update</h5>
+                            <h5>&nbsp;Current Barcode</h5>
                         </div>
                         </div>
                         <div class="form-row">
@@ -103,7 +104,7 @@
                         &nbsp;
                         <div class="form-row">
                         <div>
-                            <h5>&nbsp;Enter the updated Product</h5>
+                            <h5>&nbsp;Updated Product</h5>
                         </div>
                         </div>
                         <div class="form-row">
@@ -166,10 +167,7 @@
         </div>
         </div>
     
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="../static/papaparse.min.js"></script>
-    <script src="../static/app.js"></script>
+    <footer th:replace="snippet.html :: name_footer"></footer>
     <script src="../static/product.js"></script>
 </body>
 </html>
