Fixed issues in sales report and added some checks

--- a/src/main/webapp/html/inventory.html
+++ b/src/main/webapp/html/inventory.html
@@ -46,11 +46,9 @@
 
         
         <table class="table" id="inventoryTable">
-            <caption>List of Inventory
-            </caption>
             <thead class="table-dark">
                 <tr>
-                    <th scope="col" name="id">Serial No.</th>
+                    <th scope="col" name="id">S/N</th>
                     <th scope="col" name="barcode">Barcode</th>
                     <th scope="col" name="quantity">Quantity</th>
                     <th scope="col" name="action" class="d-flex justify-content-end">Actions</th>
@@ -99,7 +97,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col">
-                            <input type="text" class="form-control" name="quantity" placeholder="Quantity" id="quantityInput">
+                            <input type="text" class="form-control" name="quantity" placeholder="Quantity" id="quantityUpdateInput">
                         </div>
                     </div>
                   </form>
