--- a/src/main/webapp/html/product.html
+++ b/src/main/webapp/html/product.html
@@ -51,11 +51,9 @@
         </form>
     &nbsp;
         <table class="table" id="productTable">
-            <caption>List of Products
-            </caption>
             <thead class="table-dark">
                 <tr>
-                    <th scope="col">Serial No.</th>
+                    <th scope="col">S/N</th>
                     <th scope="col">Barcode</th>
                     <th scope="col">Brand</th>
                     <th scope="col">Category</th>
