--- a/src/main/webapp/html/snippet.html
+++ b/src/main/webapp/html/snippet.html
@@ -46,7 +46,7 @@
 </nav>
 
 <footer class="footer  mt-1" th:fragment="name_footer">
-	<div style="text-align: center; font-size: medium; background-color: #e0e0e0;">Copyright Increff 2022<br></div>
+	<div style="text-align: center; font-size: large; background-color: #c6ddfc;padding: 10px;position: sticky;bottom: 0;width: 100%;">Copyright Increff 2022<br></div>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <script src="../static/jquery-ajax-native.js"></script>
