--- a/src/main/webapp/html/brand.html
+++ b/src/main/webapp/html/brand.html
@@ -43,12 +43,9 @@
     &nbsp;
         
         <table class="table" id="brandTable">
-            <caption>List of Brand
-                
-            </caption>
             <thead class="table-dark">
                 <tr>
-                    <th scope="col" name="id">Serial No.</th>
+                    <th scope="col" name="id">S/N</th>
                     <th scope="col" name="brand">Brand</th>
                     <th scope="col" name="category">Category</th>
                     <th scope="col" class="d-flex justify-content-end" name="action">Actions</th>
