--- a/src/main/webapp/html/home.html
+++ b/src/main/webapp/html/home.html
@@ -35,6 +35,13 @@
         </table>
     </div>
 
-    <footer th:replace="snippet.html :: name_footer"></footer>
+    <footer>
+      <div style="text-align: center; font-size: large; background-color: #c6ddfc;padding: 10px;position: fixed;bottom: 0;width: 100%;">Copyright Increff 2022<br></div>
+    </footer>    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="../static/jquery-ajax-native.js"></script>
+    <script th:src="@{/static/papaparse.min.js}"/></script>
+    <script th:src="@{/static/app.js}"/></script>
 </body>
 </html>
