--- a/src/main/webapp/html/index.html
+++ b/src/main/webapp/html/index.html
@@ -7,15 +7,21 @@
         <div class="row">
             <div class="col-6">
                 <div class="jumbotron">
-                    <h1 class="display-4">Hello, world!</h1>
-                    <p class="lead">Welcome to Point of Sale Web App</p>
+                    <h1 class="display-4">Increff</h1>
+                    <p class="lead">Welcome to the Incredible Efficiency</p>
                     <hr class="my-4">
                     <a class="btn btn-primary btn-lg" th:href="@{/site/login}" role="button">Get Started</a>
                 </div>
             </div>
         </div>
     </div> <!--Container-->
-        
-    <footer th:replace="snippet.html :: name_footer"></footer>
+    <footer>
+        <div style="text-align: center; font-size: large; background-color: #c6ddfc;padding: 10px;position: fixed;bottom: 0;width: 100%;">Copyright Increff 2022<br></div>
+    </footer>    
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="../static/jquery-ajax-native.js"></script>
+	<script th:src="@{/static/papaparse.min.js}"/></script>
+    <script th:src="@{/static/app.js}"/></script>
 </body>
 </html>
