--- a/src/main/webapp/html/order.html
+++ b/src/main/webapp/html/order.html
@@ -171,7 +171,7 @@
           <div class="modal-dialog modal-lg" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="createOrderModalLabel">Orders-Items</h5>
+                <h5 class="modal-title" id="createOrderModalLabel">Order</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
@@ -195,7 +195,7 @@
                 <table class="table" id="orderItemTableAdd">
                   <thead class="table-dark">
                       <tr>
-                          <th scope="col" name="id">#</th>
+                          <th scope="col" name="id">S/N</th>
                           <th scope="col" name="barcode">Barcode</th>
                           <th scope="col" name="quantity">Quantity</th>
                           <th scope="col" name="mrp">Mrp</th>
